Fixed Feedback button cut off

--- a/web/frontend/src/components/components.module.css
+++ b/web/frontend/src/components/components.module.css
@@ -74,7 +74,7 @@
 .FeedbackButtonDiv{
     position:absolute;
     top:50%;
-    right:-1%;
+    right:0;
     height:10%;
     transform: rotate(90deg);
 }
