--- a/web/frontend/src/index.css
+++ b/web/frontend/src/index.css
@@ -26,5 +26,5 @@ code {
     flex-direction: column;
 }
 .appbody{
-    padding: 12px;
+    padding: 16px;
 }
